# nerd-font-installer

./: .pre-commit-config.yaml  README.md  mypy.ini  nerd_font_installer  pyproject.toml
src/nerd_font_installer/: cli.py  installer.py  listing.py
