[project]
name = "nerd-font-installer"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "httpx>=0.27.0",
    "bs4>=0.0.2",
    "click>=8.1.7",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pre-commit>=3.8.0",
    "mypy>=1.11.0",
    "isort>=5.13.2",
    "black>=24.4.2",
    "autoflake>=2.3.1",
    "python-lsp-server[all]>=1.11.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/nerd_font_installer"]

[project.scripts]
nerd-font-installer = "nerd_font_installer.cli:main"

[tool.black]
line-length = 160

[tool.isort]
profile = "black"

[tool.autoflake]
remove-unused-variables = true
remove-all-unused-imports = true
in-place = true
recursive = true
